@startuml classdiagram

skinparam ClassAttributeIconSize 0
skinparam CircledCharacterRadius 0
skinparam CircledCharacterFontSize 0
skinparam ClassFontStyle bold

class JFrame {}
class JPanel {}
class JPopupMenu {}

' package: viewcomponents
interface IViewComponent << interface >> {
  {abstract} + UpdateComponent()
}

together {
  class MenuFrame {
    - playerCount: int
    - InitComponent()
    - InitListeners()
    + MenuFrame()
    + GetPlayerCount(): int
  }

  class GameFrame {
    - InitComponent()
    + UpdateComponent()
    + GameFrame()
  }
}

class PlayerInfoPanel{
  + setPlayerName(s:String)
  + setplayerAsteroid(a: String)
  + setPlayerState(state:PlayerState)
  + PlayerInfoPanel()
}

together {
  class EnvironmentPanel {
    - InitComponent()
    - InitListeners()
    + UpdateComponent()
    + EnvironmentPanel()
  }

  class InventoryListPanel {
    - InitComponent()
    - InitListeners()
    + UpdateComponent()
    + GetResourceAt(e: MouseEvent): AbstractBaseResource
    + InventoryListPanel()
  }

  class PlayerListPanel {
    - InitListeners()
    + UpdateComponent()
    + PlayerListPanel()
  }

  class LogPanel {
    - InitComponent()
    - InitListeners()
    + UpdateComponent()
    + LogPanel()
  }
}

abstract class AbstractPopupMenu {
  + Show(e: MouseEvent)
}

together {
  class AsteroidPopupMenu {
    + AsteroidPopupMenu(a: Asteroid, e: MouseEvent)
  }

  class TeleportGatePopupMenu {
    + TeleportGatePopupMenu(t: TeleportGate, e: MouseEvent)
  }

  class SettlerActionPopupMenu {
    + ActionPopupMenu(s: Settler, e: MouseEvent)
  }
}

class TurnController << singleton >> {
  + GetCurrentPlayer(): Settler
}

' Interface realizations
GameFrame .up..|> IViewComponent
EnvironmentPanel .up..|> IViewComponent
InventoryListPanel .up..|> IViewComponent
PlayerListPanel .up..|> IViewComponent
LogPanel .up..|> IViewComponent

' Inheritance
GameFrame -up--|> JFrame
MenuFrame -up--|> JFrame

EnvironmentPanel -down--|> JPanel
InventoryListPanel -down--|> JPanel
PlayerListPanel -down--|> JPanel
PlayerInfoPanel -down--|> JPanel
LogPanel -down--|> JPanel

AbstractPopupMenu -up-|> JPopupMenu
AsteroidPopupMenu -up-|> AbstractPopupMenu
TeleportGatePopupMenu -up-|> AbstractPopupMenu
SettlerActionPopupMenu -up-|> AbstractPopupMenu

' This is for better display
JPopupMenu -[hidden]up-> JPanel

' Associations
GameFrame *--- "- environmentPanel 1" EnvironmentPanel
GameFrame *--- "- inventoryListPanel 1" InventoryListPanel
GameFrame *--- "- playerListPanel 1" PlayerListPanel
GameFrame *--- "- logPanel 1" LogPanel
PlayerListPanel *--- "- playerList *" PlayerInfoPanel

PlayerListPanel --- "- settlers 1..*" Settler
TurnController --- "- player 1" Settler

@enduml
